Adjusted menu so that menu items no longer overflow onto screen with resizing.

--- a/styles.css
+++ b/styles.css
@@ -69,12 +69,14 @@ select{
   }
 
   .hamburger {
-    position: fixed;
-    z-index: 100;
-    top: 1rem;
-    left: 50%;
-    transform: translateX(-50%);
+    display: block;
     cursor: pointer;
+    min-width: 0;
+    left: 50%;
+    position: fixed;
+    top: 1rem;
+    transform: translateX(-50%);
+    z-index: 100;
   }
 
   .closeIcon {
@@ -83,26 +85,30 @@ select{
 
   .menu {
     align-items: center;
+    background: black;
+    bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    left: 0;
+    list-style: none;
     position: fixed;
+    right: 0;
     transform: translateY(-100%);
     transition: transform 0.5s;
     top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     z-index: 99;
-    background: black;
-    list-style: none;
   }
 
   .menu a{
     color: white;
-    font-size: 4em;
+    font-size: 6vw;
     font-family: "Graffiti";
     text-decoration: none;
+  }
+
+  .menu a:hover{
+    text-decoration: underline;
   }
 
   .showMenu {
@@ -113,6 +119,6 @@ select{
     display: flex;
   }
 
-nav{
-min-height: fit-content;
+.spacer{
+  height: 1vh;
 }
